--- a/index.html
+++ b/index.html
@@ -87,33 +87,50 @@
       </nav>
 
       <!-- Banner -->
-      <section
-        class="relative w-full md:max-w-[1100px] m-auto p-3 md:p-0 mb-11 md:mb-28 hidden"
-      >
-        <!-- Text -->
-        <img src="assets/cat-big.png" alt="" class="w-full" />
-        <div class="absolute p-3 top-0 left-0 pt-5 max-w-[550px] space-y-4">
-          <h1 class="font-adam font-normal text-5xl">
-            Pamper Your Pet, Because They Deserve the Best
+      <div class="md:max-w-[1100px] m-auto p-3 md:p-0 mb-11 md:mb-28">
+        <!--Banner Text -->
+        <div class="space-y-5 relative sm:absolute z-20 px-1">
+          <h1 class="hidden font-adam font-normal text-4xl md:text-5xl">
+            Pamper Your Pet,<br class="hidden md:inline" /><br />Because They
+            Deserve<br class="hidden md:inline" /><br />the Best
           </h1>
-          <p class="text-base font-normal leading-7 opacity-70">
+          <h1
+            class="font-adam font-normal text-3xl md:text-5xl sm:w-full md:max-w-[550px] sm:leading-tight md:leading-normal text-black"
+          >
+            Pamper Your Pet,<br class="md:hidden" />
+            Because They Deserve <br class="md:hidden" />
+            the Best
+          </h1>
+          <p
+            class="text-lg font-normal leading-7 opacity-70 max-w-[550px] sm:text-base"
+          >
             Discover a world of treats, toys, and essentials handpicked for your
             furry friends. Shop now and make tails wag with joy!
           </p>
-          <button class="bg-color-btn px-6 py-2 rounded-md hover:bg-white">
+          <button
+            class="bg-color-btn px-6 py-2 rounded-md hover:bg-white hover:border hover:border-black"
+          >
             Find a Pet
           </button>
         </div>
-      </section>
+        <!-- Banner Image -->
+        <img
+          class="sm:relative z-10 -mt-28 sm:-mt-2 md:-top-1 sm:-top-20"
+          src="assets/cat-big.png"
+          alt=""
+        />
+      </div>
     </header>
     <main>
       <!-- Browse By Categories -->
-      <section class="md:max-w-[1100px] m-auto p-3 md:p-0 md:py-5">
-        <h1 class="text-3xl font-normal font-adam mb-9">
+      <section
+        class="md:max-w-[1100px] m-auto p-3 md:p-0 md:py-5 mb-11 md:mb-24"
+      >
+        <h2 class="text-3xl font-normal font-adam mb-9">
           Browse By Categories
-        </h1>
+        </h2>
         <!-- card container -->
-        <div class="grid grid-cols-2 md:grid-cols-6 gap-5">
+        <div class="grid grid-cols-2 md:grid-cols-6 gap-2 md:gap-5">
           <!-- card-1 -->
           <div
             class="bg-color-primary rounded-lg flex flex-col justify-center items-center gap-5"
@@ -220,6 +237,222 @@
       </section>
 
       <!-- Trending Pet Products -->
+      <section class="bg-[#FFF9F4] py-3 md:py-28">
+        <div class="md:max-w-[1100px] m-auto p-3 md:p-0 md:py-5">
+          <h2 class="text-3xl font-normal font-adam mb-9">
+            Trending Pet Products
+          </h2>
+          <!-- product container -->
+          <div class="md:flex md:justify-between md:gap-5 sm:mb-5">
+            <!-- hero product -->
+            <div
+              class="overflow-hidden relative bg-[#F9DF8A] rounded-lg w-full md:w-1/3"
+            >
+              <!-- text -->
+              <div class="px-6 pt-10 space-y-3 absolute">
+                <h4 class="text-2xl font-normal font-adam">T-Shirt For Dog</h4>
+                <p
+                  class="text-sm font-normal leading-normal text-[#111111B2] pr-11"
+                >
+                  Discover a world of treats, toys, and essentials handpicked
+                  for
+                </p>
+                <button
+                  class="bg-white px-6 py-2 rounded-md border border-color-btn hover:bg-slate-400"
+                >
+                  Shop Now
+                </button>
+              </div>
+              <!-- img -->
+              <img
+                src="assets/hero-pro.png"
+                class="relative left-[42%] top-10 md:top-14"
+              />
+            </div>
+
+            <!-- product small cards container -->
+            <div
+              class="w-full md:w-2/3 grid grid-cols-2 grid-row-4 md:grid-cols-3 md:grid-row-3 gap-3 md:gap-5 text-black"
+            >
+              <!-- 1 -->
+              <div
+                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+              >
+                <div class="pl-4">
+                  <img
+                    src="assets/dog1.svg"
+                    class="bg-[#FFF9F4] rounded-lg p-4"
+                  />
+                </div>
+
+                <!-- text -->
+                <div class="space-y-2 py-4 pr-4">
+                  <div class="flex gap-2">
+                    <img src="assets/star.svg" />
+                    <p>4.5</p>
+                  </div>
+                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h6 class="text-sm font-medium">$39.99</h6>
+                </div>
+              </div>
+              <!-- 2 -->
+              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+                <div class="pl-4">
+                  <img
+                    src="assets/fish.svg"
+                    class="bg-[#FFF9F4] rounded-lg p-4"
+                  />
+                </div>
+
+                <!-- text -->
+                <div class="space-y-2 py-4 pr-4">
+                  <div class="flex gap-2">
+                    <img src="assets/star.svg" />
+                    <p>4.5</p>
+                  </div>
+                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h6 class="text-sm font-medium">$39.99</h6>
+                </div>
+              </div>
+              <!-- 3 -->
+              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+                <div class="pl-4">
+                  <img
+                    src="assets/bird.svg"
+                    class="bg-[#FFF9F4] rounded-lg p-4"
+                  />
+                </div>
+
+                <!-- text -->
+                <div class="space-y-2 py-4 pr-4">
+                  <div class="flex gap-2">
+                    <img src="assets/star.svg" />
+                    <p>4.5</p>
+                  </div>
+                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h6 class="text-sm font-medium">$39.99</h6>
+                </div>
+              </div>
+              <!-- 4 -->
+              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+                <div class="pl-4">
+                  <img
+                    src="assets/rabbit.svg"
+                    class="bg-[#FFF9F4] rounded-lg p-4"
+                  />
+                </div>
+
+                <!-- text -->
+                <div class="space-y-2 py-4 pr-4">
+                  <div class="flex gap-2">
+                    <img src="assets/star.svg" />
+                    <p>4.5</p>
+                  </div>
+                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h6 class="text-sm font-medium">$39.99</h6>
+                </div>
+              </div>
+              <!-- 5 -->
+              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+                <div class="pl-4">
+                  <img
+                    src="assets/bird.svg"
+                    class="bg-[#FFF9F4] rounded-lg p-4"
+                  />
+                </div>
+
+                <!-- text -->
+                <div class="space-y-2 py-4 pr-4">
+                  <div class="flex gap-2">
+                    <img src="assets/star.svg" />
+                    <p>4.5</p>
+                  </div>
+                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h6 class="text-sm font-medium">$39.99</h6>
+                </div>
+              </div>
+              <!-- 6 -->
+              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+                <div class="pl-4">
+                  <img
+                    src="assets/bedsvg.svg"
+                    class="bg-[#FFF9F4] rounded-lg p-4"
+                  />
+                </div>
+
+                <!-- text -->
+                <div class="space-y-2 py-4 pr-4">
+                  <div class="flex gap-2">
+                    <img src="assets/star.svg" />
+                    <p>4.5</p>
+                  </div>
+                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h6 class="text-sm font-medium">$39.99</h6>
+                </div>
+              </div>
+              <!-- 7 -->
+              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+                <div class="pl-4">
+                  <img
+                    src="assets/fish.svg"
+                    class="bg-[#FFF9F4] rounded-lg p-4"
+                  />
+                </div>
+
+                <!-- text -->
+                <div class="space-y-2 py-4 pr-4">
+                  <div class="flex gap-2">
+                    <img src="assets/star.svg" />
+                    <p>4.5</p>
+                  </div>
+                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h6 class="text-sm font-medium">$39.99</h6>
+                </div>
+              </div>
+              <!-- 8 -->
+              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+                <div class="pl-4">
+                  <img
+                    src="assets/bedsvg.svg"
+                    class="bg-[#FFF9F4] rounded-lg p-4"
+                  />
+                </div>
+
+                <!-- text -->
+                <div class="space-y-2 py-4 pr-4">
+                  <div class="flex gap-2">
+                    <img src="assets/star.svg" />
+                    <p>4.5</p>
+                  </div>
+                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h6 class="text-sm font-medium">$39.99</h6>
+                </div>
+              </div>
+              <!-- 9 -->
+              <div
+                class="bg-white rounded-lg md:flex gap-3 items-center border border-[#1111111A] hidden"
+              >
+                <div class="pl-4">
+                  <img
+                    src="assets/rabbit.svg"
+                    class="bg-[#FFF9F4] rounded-lg p-4"
+                  />
+                </div>
+
+                <!-- text -->
+                <div class="space-y-2 py-4 pr-4">
+                  <div class="flex gap-2">
+                    <img src="assets/star.svg" />
+                    <p>4.5</p>
+                  </div>
+                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h6 class="text-sm font-medium">$39.99</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
