--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
             Trending Pet Products
           </h2>
           <!-- product container -->
-          <div class="md:flex md:justify-between md:gap-5 sm:mb-5">
+          <div class="md:flex md:justify-between md:gap-5">
             <!-- hero product -->
             <div
-              class="overflow-hidden relative bg-[#F9DF8A] rounded-lg w-full md:w-1/3"
+              class="overflow-hidden relative bg-[#F9DF8A] rounded-lg w-full md:w-1/3 mb-5 md:mb-0"
             >
               <!-- text -->
               <div class="px-6 pt-10 space-y-3 absolute">
@@ -296,7 +296,9 @@
                 </div>
               </div>
               <!-- 2 -->
-              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+              <div
+                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+              >
                 <div class="pl-4">
                   <img
                     src="assets/fish.svg"
@@ -315,7 +317,9 @@
                 </div>
               </div>
               <!-- 3 -->
-              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+              <div
+                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+              >
                 <div class="pl-4">
                   <img
                     src="assets/bird.svg"
@@ -334,7 +338,9 @@
                 </div>
               </div>
               <!-- 4 -->
-              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+              <div
+                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+              >
                 <div class="pl-4">
                   <img
                     src="assets/rabbit.svg"
@@ -353,7 +359,9 @@
                 </div>
               </div>
               <!-- 5 -->
-              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+              <div
+                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+              >
                 <div class="pl-4">
                   <img
                     src="assets/bird.svg"
@@ -372,7 +380,9 @@
                 </div>
               </div>
               <!-- 6 -->
-              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+              <div
+                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+              >
                 <div class="pl-4">
                   <img
                     src="assets/bedsvg.svg"
@@ -391,7 +401,9 @@
                 </div>
               </div>
               <!-- 7 -->
-              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+              <div
+                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+              >
                 <div class="pl-4">
                   <img
                     src="assets/fish.svg"
@@ -410,7 +422,9 @@
                 </div>
               </div>
               <!-- 8 -->
-              <div class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]">
+              <div
+                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+              >
                 <div class="pl-4">
                   <img
                     src="assets/bedsvg.svg"
@@ -450,6 +464,58 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- price section -->
+      <section
+        class="md:max-w-[1100px] m-auto p-3 md:p-0 md:py-5 mb-11 md:mb-24 mt-11 md:mt-28"
+      >
+        <h1 class="font-adam text-3xl font-normal mb-9">Everyday Low Price</h1>
+        <!-- Price Container -->
+        <div class="grid md:grid-rows-1 gap-6 md:grid-cols-[60%_40%]">
+          <div
+            class="card card-side h-[335px] md:h-[480px] bg-gradient-to-br from-[#F8CCFB] to-[#ACD2FD] flex md:items-center overflow-hidden"
+          >
+            <!-- text -->
+            <div class="relative top-[10%] md:top-0 left-[10%]">
+              <p class="text-lg hidden md:inline">Under Price</p>
+              <h2 class="font-adam text-[23px] md:text-2xl">
+                Pet Grooming Mitt
+              </h2>
+              <p class="font-adam text-white text-xl hidden md:inline">
+                (Easy Hair Removal)
+              </p>
+              <br class="hidden md:inline" />
+              <br class="hidden md:inline" />
+              <h2
+                class="font-adam text-white md:text-black text-[40px] md:text-5xl"
+              >
+                $7.99
+              </h2>
+            </div>
+            <!-- Image -->
+            <figure class="absolute left-[40%] top-[20%] md:top-0 md:w-3/5">
+              <img src="assets/cute-dog-mid.png" />
+            </figure>
+          </div>
+          <div
+            class="card card-side h-[335px] md:h-[480px] bg-gradient-to-br from-[#FFF9F4] to-[#F9DF8A] overflow-hidden pb-"
+          >
+            <!-- text -->
+            <div class="relative w-[280px] top-[10%] left-[10%]">
+              <h2 class="font-adam text-[23px] md:text-[32px]">
+                T-Shirt for Dogs
+              </h2>
+              <h2 class="font-adam text-[#FFDC26] text-[40px] md:text-[56px]">
+                $7.99
+              </h2>
+            </div>
+            <!-- Image -->
+            <figure class="absolute left-[35%] top-[25%]">
+              <img src="assets/cute-pet-mid.png" alt="Movie" class="w-full" />
+            </figure>
           </div>
         </div>
       </section>
