--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
       <!-- price section -->
       <section
-        class="md:max-w-[1100px] m-auto p-3 md:p-0 md:py-5 mb-11 md:mb-24 mt-11 md:mt-28"
+        class="md:max-w-[1100px] m-auto p-3 md:p-0 md:py-5 mb-96 md:mb-80 mt-11 md:mt-28"
       >
         <h1 class="font-adam text-3xl font-normal mb-9">Everyday Low Price</h1>
         <!-- Price Container -->
@@ -519,7 +519,50 @@
           </div>
         </div>
       </section>
+  
     </main>
-    <footer></footer>
+    <footer class="bg-[#FFDC2680]">
+      <!-- news -->
+      <div class="mx-auto w-full px-4 md:px-0 md:max-w-[1100px]">
+        <section
+          class="bg-[#FFF9F4] transform -translate-y-1/2 m-auto p-3 md:p-0 md:py-5 mt-24 md:flex md:justify-start rounded-2xl items-center -mb-48 gap-24"
+        >
+          <div class="md:max-w-[264px] max-w-[200px] pt-8 mx-auto">
+            <img src="assets/cute-pet-mid.png" alt="" />
+          </div>
+          <div class="text-center md:text-start">
+            <h1 class="font-adam text-3xl font-normal mb-5">
+              Get Pawsome News!
+            </h1>
+            <p class="text-lg mt-4 w-[320px] md:w-[536px] mx-auto">
+              Exclusive training tips, product deals and more.
+            </p>
+            <br />
+            <input
+              type="email"
+              name=""
+              placeholder="Enter email"
+              class="md:max-w-[472px] max-w-[250px] h-[42px] md:h-[67px] rounded-lg py-4 pl-4 w-full"
+            /><br /><br />
+            <button
+              class="bg-color-btn px-6 py-2 rounded-md hover:bg-white hover:border hover:border-black"
+            >
+              Subscribe
+            </button>
+          </div>
+        </section>
+      </div>
+
+      <!-- links -->
+      <div class="md:max-w-[1100px] m-auto p-3"></div>
+
+      <div class="flex justify-start gap-10 md:max-w-[1100px] m-auto p-3">
+        <div class="h-32 bg-slate-700 w-1/2"></div>
+        <div class="flex justify-between gap-10 w-1/2">
+          <div class="w-32 h-32 bg-slate-700"></div>
+          <div class="w-32 h-32 bg-slate-700"></div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
