--- a/index.html
+++ b/index.html
@@ -519,7 +519,6 @@
           </div>
         </div>
       </section>
-  
     </main>
     <footer class="bg-[#FFDC2680]">
       <!-- news -->
@@ -554,13 +553,38 @@
       </div>
 
       <!-- links -->
-      <div class="md:max-w-[1100px] m-auto p-3"></div>
-
-      <div class="flex justify-start gap-10 md:max-w-[1100px] m-auto p-3">
-        <div class="h-32 bg-slate-700 w-1/2"></div>
-        <div class="flex justify-between gap-10 w-1/2">
-          <div class="w-32 h-32 bg-slate-700"></div>
-          <div class="w-32 h-32 bg-slate-700"></div>
+      <div
+        class="flex flex-col md:flex-row justify-start gap-10 md:max-w-[1100px] m-auto p-3 mt-[10px] md:mt-[100px] pb-24"
+      >
+        <div class="gap-3 w-full md:w-1/2 space-y-6">
+          <div class="flex gap-3 items-center">
+            <img src="assets/footer.svg" />
+            <h5 class="text-2xl font-normal">
+              Browes<span class="text-[#dcbe3a]">4</span>Pets
+            </h5>
+          </div>
+          <p class="text-lg text-[#111111]/70">
+            Discover a world of treats, toys, and essentials handpicked for your
+            furry friends
+          </p>
+        </div>
+        <div class="flex flex-col md:flex-row justify-between gap-10 w-1/2">
+          <div class="text-base text-black flex flex-col gap-7">
+            <a href="">Find a pet</a>
+            <a href="">Breeds</a>
+            <a href="">Contact us</a>
+          </div>
+          <div class="md:relative">
+            <div class="absolute md:bottom-0 md:right-4 space-y-3">
+              <h6 class="text-sm font-medium">Follow Us</h6>
+              <div class="flex gap-5">
+                <a href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
+                <a href=""><i class="fa-brands fa-instagram fa-lg"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
+                <a href=""><i class="fa-brands fa-youtube fa-lg"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
