--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
         },
       };
     </script>
+    <style>
+      @keyframes fadeSlide {
+        0% {
+          opacity: 0;
+          transform: translateX(-50px);
+        }
+        50% {
+          opacity: 1;
+          transform: translateX(0);
+        }
+        100% {
+          opacity: 0;
+          transform: translateX(50px);
+        }
+      }
+    </style>
   </head>
   <body class="font-sora">
     <header class="m-auto">
@@ -90,12 +106,8 @@
       <div class="md:max-w-[1100px] m-auto p-3 md:p-0 mb-11 md:mb-28">
         <!--Banner Text -->
         <div class="space-y-5 relative sm:absolute z-20 px-1">
-          <h1 class="hidden font-adam font-normal text-4xl md:text-5xl">
-            Pamper Your Pet,<br class="hidden md:inline" /><br />Because They
-            Deserve<br class="hidden md:inline" /><br />the Best
-          </h1>
           <h1
-            class="font-adam font-normal text-3xl md:text-5xl sm:w-full md:max-w-[550px] sm:leading-tight md:leading-normal text-black"
+            class="font-adam animate-[fadeSlide_3s_infinite] font-normal text-3xl md:text-5xl sm:w-full md:max-w-[550px] sm:leading-tight md:leading-normal text-black"
           >
             Pamper Your Pet,<br class="md:hidden" />
             Because They Deserve <br class="md:hidden" />
@@ -133,7 +145,7 @@
         <div class="grid grid-cols-2 md:grid-cols-6 gap-2 md:gap-5">
           <!-- card-1 -->
           <div
-            class="bg-color-primary rounded-lg flex flex-col justify-center items-center gap-5"
+            class="bg-color-primary hover:bg-slate-400 rounded-lg flex flex-col justify-center items-center gap-5"
           >
             <div class="pt-7">
               <img
@@ -150,7 +162,7 @@
           </div>
           <!-- card-2 -->
           <div
-            class="bg-color-primary rounded-lg flex flex-col justify-center items-center gap-5"
+            class="bg-color-primary hover:bg-slate-400 rounded-lg flex flex-col justify-center items-center gap-5"
           >
             <div class="pt-7">
               <img
@@ -167,7 +179,7 @@
           </div>
           <!-- card-3 -->
           <div
-            class="bg-color-primary rounded-lg flex flex-col justify-center items-center gap-5"
+            class="bg-color-primary hover:bg-slate-400 rounded-lg flex flex-col justify-center items-center gap-5"
           >
             <div class="pt-7">
               <img
@@ -184,7 +196,7 @@
           </div>
           <!-- card-4 -->
           <div
-            class="bg-color-primary rounded-lg flex flex-col justify-center items-center gap-5"
+            class="bg-color-primary hover:bg-slate-400 rounded-lg flex flex-col justify-center items-center gap-5"
           >
             <div class="pt-7">
               <img
@@ -201,7 +213,7 @@
           </div>
           <!-- card-5 -->
           <div
-            class="bg-color-primary rounded-lg flex flex-col justify-center items-center gap-5"
+            class="bg-color-primary hover:bg-slate-400 rounded-lg flex flex-col justify-center items-center gap-5"
           >
             <div class="pt-7">
               <img
@@ -218,7 +230,7 @@
           </div>
           <!-- card-6 -->
           <div
-            class="bg-color-primary rounded-lg flex flex-col justify-center items-center gap-5"
+            class="bg-color-primary hover:bg-slate-400 rounded-lg flex flex-col justify-center items-center gap-5"
           >
             <div class="pt-7">
               <img
@@ -276,7 +288,7 @@
             >
               <!-- 1 -->
               <div
-                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+                class="bg-white hover:bg-slate-200 rounded-lg flex gap-3 items-center border border-[#1111111A]"
               >
                 <div class="pl-4">
                   <img
@@ -291,13 +303,13 @@
                     <img src="assets/star.svg" />
                     <p>4.5</p>
                   </div>
-                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h5 class="text-base font-medium">Dog Toy</h5>
                   <h6 class="text-sm font-medium">$39.99</h6>
                 </div>
               </div>
               <!-- 2 -->
               <div
-                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+                class="bg-white hover:bg-slate-200 rounded-lg flex gap-3 items-center border border-[#1111111A]"
               >
                 <div class="pl-4">
                   <img
@@ -312,13 +324,13 @@
                     <img src="assets/star.svg" />
                     <p>4.5</p>
                   </div>
-                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h5 class="text-base font-medium">Pet Toy</h5>
                   <h6 class="text-sm font-medium">$39.99</h6>
                 </div>
               </div>
               <!-- 3 -->
               <div
-                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+                class="bg-white hover:bg-slate-200 rounded-lg flex gap-3 items-center border border-[#1111111A]"
               >
                 <div class="pl-4">
                   <img
@@ -333,13 +345,13 @@
                     <img src="assets/star.svg" />
                     <p>4.5</p>
                   </div>
-                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h5 class="text-base font-medium">Bird Toy</h5>
                   <h6 class="text-sm font-medium">$39.99</h6>
                 </div>
               </div>
               <!-- 4 -->
               <div
-                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+                class="bg-white hover:bg-slate-200 rounded-lg flex gap-3 items-center border border-[#1111111A]"
               >
                 <div class="pl-4">
                   <img
@@ -354,13 +366,13 @@
                     <img src="assets/star.svg" />
                     <p>4.5</p>
                   </div>
-                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h5 class="text-base font-medium">Pet Food</h5>
                   <h6 class="text-sm font-medium">$39.99</h6>
                 </div>
               </div>
               <!-- 5 -->
               <div
-                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+                class="bg-white hover:bg-slate-200 rounded-lg flex gap-3 items-center border border-[#1111111A]"
               >
                 <div class="pl-4">
                   <img
@@ -381,7 +393,7 @@
               </div>
               <!-- 6 -->
               <div
-                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+                class="bg-white hover:bg-slate-200 rounded-lg flex gap-3 items-center border border-[#1111111A]"
               >
                 <div class="pl-4">
                   <img
@@ -402,7 +414,7 @@
               </div>
               <!-- 7 -->
               <div
-                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+                class="bg-white hover:bg-slate-200 rounded-lg flex gap-3 items-center border border-[#1111111A]"
               >
                 <div class="pl-4">
                   <img
@@ -423,7 +435,7 @@
               </div>
               <!-- 8 -->
               <div
-                class="bg-white rounded-lg flex gap-3 items-center border border-[#1111111A]"
+                class="bg-white hover:bg-slate-200 rounded-lg flex gap-3 items-center border border-[#1111111A]"
               >
                 <div class="pl-4">
                   <img
@@ -444,7 +456,7 @@
               </div>
               <!-- 9 -->
               <div
-                class="bg-white rounded-lg md:flex gap-3 items-center border border-[#1111111A] hidden"
+                class="bg-white hover:bg-slate-200 rounded-lg md:flex gap-3 items-center border border-[#1111111A] hidden"
               >
                 <div class="pl-4">
                   <img
@@ -459,7 +471,7 @@
                     <img src="assets/star.svg" />
                     <p>4.5</p>
                   </div>
-                  <h5 class="text-base font-medium">Pet Bed</h5>
+                  <h5 class="text-base font-medium">Pet Toy</h5>
                   <h6 class="text-sm font-medium">$39.99</h6>
                 </div>
               </div>
@@ -470,7 +482,7 @@
 
       <!-- price section -->
       <section
-        class="md:max-w-[1100px] m-auto p-3 md:p-0 md:py-5 mb-96 md:mb-80 mt-11 md:mt-28"
+        class="md:max-w-[1100px] m-auto p-3 md:p-0 md:py-5 mb-11 md:mb-16 mt-11 md:mt-28"
       >
         <h1 class="font-adam text-3xl font-normal mb-9">Everyday Low Price</h1>
         <!-- Price Container -->
@@ -516,6 +528,98 @@
             <figure class="absolute left-[35%] top-[25%]">
               <img src="assets/cute-pet-mid.png" alt="Movie" class="w-full" />
             </figure>
+          </div>
+        </div>
+      </section>
+
+      <!-- Customer Testimonials Section -->
+      <section class="md:max-w-[1100px] m-auto p-3 md:p-0 md:py-5 mb-96">
+        <h2
+          class="text-3xl font-normal font-adam mb-9 md:text-left sm:text-center"
+        >
+          Customer Testimonials
+        </h2>
+
+        <!-- Card Container -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+          <!-- Card 1 -->
+          <div class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400">
+            <img
+              src="assets/customer-1.jpg"
+              class="w-24 h-24 border-3 border-black rounded-full mx-auto mb-3"
+              alt="Customer"
+            />
+            <h4 class="text-lg font-semibold text-center">Alice Johnson</h4>
+            <p class="text-sm text-gray-600 text-center">
+              "Amazing service! Found the perfect pet for my family."
+            </p>
+            <div class="flex justify-center mt-2">
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+            </div>
+          </div>
+
+          <!-- Card 2 -->
+          <div class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400">
+            <img
+              src="assets/customer-2.jpg"
+              class="w-24 h-24 rounded-full mx-auto mb-3"
+              alt="Customer"
+            />
+            <h4 class="text-lg font-semibold text-center">Michael Smith</h4>
+            <p class="text-sm text-gray-600 text-center">
+              "Loved the experience! Easy adoption process and great support."
+            </p>
+            <div class="flex justify-center mt-2">
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star-half.svg" class="w-5 h-5" />
+            </div>
+          </div>
+
+          <!-- Card 3 -->
+          <div class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400">
+            <img
+              src="assets/customer-3.jpg"
+              class="w-24 h-24 rounded-full mx-auto mb-3"
+              alt="Customer"
+            />
+            <h4 class="text-lg font-semibold text-center">Emma Williams</h4>
+            <p class="text-sm text-gray-600 text-center">
+              "Great collection of pet products. My dog loves them!"
+            </p>
+            <div class="flex justify-center mt-2">
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+            </div>
+          </div>
+
+          <!-- Card 4 -->
+          <div class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400">
+            <img
+              src="assets/customer-4.jpg"
+              class="w-24 h-24 rounded-full mx-auto mb-3"
+              alt="Customer"
+            />
+            <h4 class="text-lg font-semibold text-center">David Brown</h4>
+            <p class="text-sm text-gray-600 text-center">
+              "Adopted a beautiful kitten. The process was smooth and easy."
+            </p>
+            <div class="flex justify-center mt-2">
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star.svg" class="w-5 h-5" />
+              <img src="assets/star-half.svg" class="w-5 h-5" />
+            </div>
           </div>
         </div>
       </section>
