--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Sora:wght@100..800&display=swap"
       rel="stylesheet"
     />
+    <!-- fav icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <!-- Frame work cdn -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css"
@@ -543,7 +548,9 @@
         <!-- Card Container -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
           <!-- Card 1 -->
-          <div class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400">
+          <div
+            class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400"
+          >
             <img
               src="assets/customer-1.jpg"
               class="w-24 h-24 border-3 border-black rounded-full mx-auto mb-3"
@@ -563,7 +570,9 @@
           </div>
 
           <!-- Card 2 -->
-          <div class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400">
+          <div
+            class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400"
+          >
             <img
               src="assets/customer-2.jpg"
               class="w-24 h-24 rounded-full mx-auto mb-3"
@@ -583,7 +592,9 @@
           </div>
 
           <!-- Card 3 -->
-          <div class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400">
+          <div
+            class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400"
+          >
             <img
               src="assets/customer-3.jpg"
               class="w-24 h-24 rounded-full mx-auto mb-3"
@@ -603,7 +614,9 @@
           </div>
 
           <!-- Card 4 -->
-          <div class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400">
+          <div
+            class="bg-white p-5 rounded-lg shadow-lg border border-gray-200 hover:bg-slate-400"
+          >
             <img
               src="assets/customer-4.jpg"
               class="w-24 h-24 rounded-full mx-auto mb-3"
@@ -658,7 +671,7 @@
 
       <!-- links -->
       <div
-        class="flex flex-col md:flex-row justify-start gap-10 md:max-w-[1100px] m-auto p-3 mt-[10px] md:mt-[100px] pb-24"
+        class="flex flex-col md:flex-row justify-start gap-10 md:max-w-[1100px] m-auto p-4 mt-[10px] md:mt-[100px] pb-24"
       >
         <div class="gap-3 w-full md:w-1/2 space-y-6">
           <div class="flex gap-3 items-center">
